Java 9 needs --add-modules for the forked failsafe process